地點詳細頁

--- a/pages/store-location.html
+++ b/pages/store-location.html
@@ -7,7 +7,7 @@
     <title>門市據點</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <%- include('./layout/font-family'); -%>
   </head>
@@ -15,25 +15,14 @@
     <%- include('./layout/header'); -%>
     <div class="container">
       <div class="location-container">
-        <div class="location-container-title">
-          <h1>門市據點</h1>
-        </div>
-
-        <div class="location-select-menu">
-          <p>選擇地區</p>
-          <select name="location" class="location">
-            <option value="台北市">台北市</option>
-            <option value="台中市">台中市</option>
-            <option value="高雄市">高雄市</option>
-          </select>
-        </div>
+        <%- include('./layout/store-location-header'); -%>
         <ul class="location-card-list">
           <li class="location-card-list-item">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
             <p class="card-title">台北中山旗艦店</p>
             <ul class="card-info">
               <li>
-                <span class="material-symbols-outlined">call</span>
+                <span class="material-symbols-outlined"> call </span>
                 <p>電話：(02)000-1234</p>
               </li>
               <li>
@@ -46,9 +35,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item mr-setting">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
             <p class="card-title">台北綠園店</p>
@@ -67,9 +57,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
             <p class="card-title">台中清水旗艦店</p>
@@ -88,9 +79,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
             <p class="card-title">高雄中正形象店</p>
@@ -109,9 +101,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item mr-setting">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
             <p class="card-title">高雄夢時代店</p>
@@ -130,7 +123,7 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
         </ul>
