--- a/location-page.html
+++ b/location-page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>門市據點</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +42,56 @@
     </div>
   </div>
 </header>
- <footer>
+    <div class="container">
+      <div class="location-container">
+        <div class="location-container-title">
+  <h1>門市據點</h1>
+</div>
+
+<div class="location-select-menu">
+  <p>選擇地區</p>
+  <select name="location" class="location">
+    <option value="台北市">台北市</option>
+    <option value="台中市">台中市</option>
+    <option value="高雄市">高雄市</option>
+  </select>
+</div>
+        <div class="page-content">
+          <ul class="page-card-list">
+            <li class="page-card-list-item">
+              <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
+              <div class="card-content">
+                <p class="card-title">台北中山旗艦店</p>
+                <ul class="card-info">
+                  <li>
+                    <span class="material-symbols-outlined">call</span>
+                    <p>電話：(02)000-1234</p>
+                  </li>
+                  <li>
+                    <span class="material-symbols-outlined">schedule </span>
+                    <p>營業時間：10:00-21:00</p>
+                  </li>
+                  <li>
+                    <span class="material-symbols-outlined"> location_on </span>
+                    <p>地址：台北市中山區南京東路25巷2-1號</p>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7233.116547100574!2d121.2837879180603!3d24.98113925907653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-TW!2stw!4v1691396121314!5m2!1szh-TW!2stw"
+            width="746"
+            height="414"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <footer>
   <div class="footer-container">
     <div class="container footer-container-flex">
       <div class="footer-left-section">
