--- a/store-location.html
+++ b/store-location.html
@@ -7,7 +7,7 @@
     <title>門市據點</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,8 +15,8 @@
   href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap"
   rel="stylesheet"
 />
-    <script type="module" crossorigin src="/HEX-3week-HW/assets/all-96c5feff.js"></script>
-    <link rel="stylesheet" href="/HEX-3week-HW/assets/all-d3fc48e2.css">
+    <script type="module" crossorigin src="/HEX-3week-HW/assets/all-a03f6364.js"></script>
+    <link rel="stylesheet" href="/HEX-3week-HW/assets/all-c438e5d9.css">
   </head>
   <body>
     <header>
@@ -45,24 +45,24 @@
     <div class="container">
       <div class="location-container">
         <div class="location-container-title">
-          <h1>門市據點</h1>
-        </div>
+  <h1>門市據點</h1>
+</div>
 
-        <div class="location-select-menu">
-          <p>選擇地區</p>
-          <select name="location" class="location">
-            <option value="台北市">台北市</option>
-            <option value="台中市">台中市</option>
-            <option value="高雄市">高雄市</option>
-          </select>
-        </div>
+<div class="location-select-menu">
+  <p>選擇地區</p>
+  <select name="location" class="location">
+    <option value="台北市">台北市</option>
+    <option value="台中市">台中市</option>
+    <option value="高雄市">高雄市</option>
+  </select>
+</div>
         <ul class="location-card-list">
           <li class="location-card-list-item">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
             <p class="card-title">台北中山旗艦店</p>
             <ul class="card-info">
               <li>
-                <span class="material-symbols-outlined">call</span>
+                <span class="material-symbols-outlined"> call </span>
                 <p>電話：(02)000-1234</p>
               </li>
               <li>
@@ -75,9 +75,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item mr-setting">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
             <p class="card-title">台北綠園店</p>
@@ -96,9 +97,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
             <p class="card-title">台中清水旗艦店</p>
@@ -117,9 +119,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
             <p class="card-title">高雄中正形象店</p>
@@ -138,9 +141,10 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
+
           <li class="location-card-list-item mr-setting">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
             <p class="card-title">高雄夢時代店</p>
@@ -159,7 +163,7 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="#">詳細資訊</a></p>
+              <p><a href="./location-page.html">詳細資訊</a></p>
             </div>
           </li>
         </ul>
@@ -177,11 +181,11 @@
           <li class="footer-list-item"><a href="#">常見問題</a></li>
         </ul>
         <div class="phone-number">
-          <i class="fa-solid fa-phone phone-icon"></i>
+          <span class="material-symbols-outlined white-color">call</span>
           <a href="tel:+0800-000-000" class="fz-setting">0800-000-000</a>
         </div>
         <div class="email">
-          <i class="fa-regular fa-envelope email-icon"></i>
+          <span class="material-symbols-outlined white-color"> mail </span>
           <a href="mailto:glasses@business.com" class="fz-setting"
             >glasses@business.com</a
           >
