修改出現X軸

--- a/pages/store-location.html
+++ b/pages/store-location.html
@@ -19,7 +19,7 @@
         <ul class="location-card-list">
           <li class="location-card-list-item">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
-            <p class="card-title">台北中山旗艦店</p>
+            <h2 class="card-title">台北中山旗艦店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined"> call </span>
@@ -35,13 +35,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item mr-setting">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
-            <p class="card-title">台北綠園店</p>
+            <h2 class="card-title">台北綠園店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -57,13 +57,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
-            <p class="card-title">台中清水旗艦店</p>
+            <h2 class="card-title">台中清水旗艦店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -79,13 +79,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
-            <p class="card-title">高雄中正形象店</p>
+            <h2 class="card-title">高雄中正形象店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -101,13 +101,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item mr-setting">
             <img src="../assets/images/store-1.png" alt="店舖圖片" />
-            <p class="card-title">高雄夢時代店</p>
+            <h2 class="card-title">高雄夢時代店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -123,7 +123,7 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
         </ul>
