--- a/store-location.html
+++ b/store-location.html
@@ -15,8 +15,8 @@
   href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap"
   rel="stylesheet"
 />
-    <script type="module" crossorigin src="/HEX-3week-HW/assets/all-a03f6364.js"></script>
-    <link rel="stylesheet" href="/HEX-3week-HW/assets/all-c438e5d9.css">
+    <script type="module" crossorigin src="/HEX-3week-HW/assets/all-cc0695ea.js"></script>
+    <link rel="stylesheet" href="/HEX-3week-HW/assets/all-30307f11.css">
   </head>
   <body>
     <header>
@@ -59,7 +59,7 @@
         <ul class="location-card-list">
           <li class="location-card-list-item">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
-            <p class="card-title">台北中山旗艦店</p>
+            <h2 class="card-title">台北中山旗艦店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined"> call </span>
@@ -75,13 +75,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item mr-setting">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
-            <p class="card-title">台北綠園店</p>
+            <h2 class="card-title">台北綠園店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -97,13 +97,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
-            <p class="card-title">台中清水旗艦店</p>
+            <h2 class="card-title">台中清水旗艦店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -119,13 +119,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
-            <p class="card-title">高雄中正形象店</p>
+            <h2 class="card-title">高雄中正形象店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -141,13 +141,13 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
 
           <li class="location-card-list-item mr-setting">
             <img src="/HEX-3week-HW/assets/store-1-e8e7cac3.png" alt="店舖圖片" />
-            <p class="card-title">高雄夢時代店</p>
+            <h2 class="card-title">高雄夢時代店</h2>
             <ul class="card-info">
               <li>
                 <span class="material-symbols-outlined">call</span>
@@ -163,7 +163,7 @@
               </li>
             </ul>
             <div class="card-footer">
-              <p><a href="./location-page.html">詳細資訊</a></p>
+              <a href="./location-page.html">詳細資訊</a>
             </div>
           </li>
         </ul>
